Add new kit documentations;

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -9,12 +9,16 @@ CONICHI_IOS_SDK_REPO_URL='https://github.com/conichiGMBH/ios-sdk.git'
 
 CONICHI_IOS_SDK_CORE_KIT_DOCUMENTATION_PATH='CNISDKCoreKit/docs/apple_doc/html'
 CONICHI_IOS_SDK_PAYMENT_KIT_DOCUMENTATION_PATH='CNISDKPaymentKit/docs/apple_doc/html'
+CONICHI_IOS_SDK_PAYLEVEN_KIT_DOCUMENTATION_PATH='CNISDKPaylevenKit/docs/apple_doc/html'
+CONICHI_IOS_SDK_SUM_UP_KIT_DOCUMENTATION_PATH='CNISDKSumUpKit/docs/apple_doc/html'
 CONICHI_IOS_SDK_PMS_KIT_DOCUMENTATION_PATH='CNISDKPMSKit/docs/apple_doc/html'
 CONICHI_IOS_SDK_GEOFENCING_KIT_DOCUMENTATION_PATH='CNISDKGeoFencingKit/docs/apple_doc/html'
 CONICHI_IOS_SDK_DIGITALKEY_KIT_DOCUMENTATION_PATH='CNISDKDigitalKeyKit/docs/apple_doc/html'
 
 CONICHI_IOS_SDK_CORE_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKCoreKit/apple_doc'
 CONICHI_IOS_SDK_PAYMENT_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKPaymentKit/apple_doc'
+CONICHI_IOS_SDK_PAYLEVEN_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKPaylevenKit/apple_doc'
+CONICHI_IOS_SDK_SUM_UP_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKSumUpKit/apple_doc'
 CONICHI_IOS_SDK_PMS_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKPMSKit/apple_doc'
 CONICHI_IOS_SDK_GEOFENCING_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKGeoFencingKit/apple_doc'
 CONICHI_IOS_SDK_DIGITALKEY_KIT_DOCUMENTATION_DESTINATION_PATH='../ios/docs/CNISDKDigitalKeyKit/apple_doc'
